--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -380,32 +380,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'statFunc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-134-7a520ab2c2a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataFrameStatFunctions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mstatFunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_train_num\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatFunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapproxQuantile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"x\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mArray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# df_train_num.select('account_length').rdd.flatMap(lambda x: x).collect()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/spark/python/pyspark/sql/dataframe.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1299\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1300\u001b[0m             raise AttributeError(\n\u001b[0;32m-> 1301\u001b[0;31m                 \"'%s' object has no attribute '%s'\" % (self.__class__.__name__, name))\n\u001b[0m\u001b[1;32m   1302\u001b[0m         \u001b[0mjc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1303\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mColumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'statFunc'"
-     ]
+     "data": {
+      "text/plain": [
+       "[74.0,\n",
+       " 0.0,\n",
+       " 143.6999969482422,\n",
+       " 87.0,\n",
+       " 24.43000030517578,\n",
+       " 166.60000610351562,\n",
+       " 87.0,\n",
+       " 14.15999984741211,\n",
+       " 167.0,\n",
+       " 87.0,\n",
+       " 7.519999980926514,\n",
+       " 8.5,\n",
+       " 3.0,\n",
+       " 2.299999952316284,\n",
+       " 1.0]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pyspark.sql import DataFrameStatFunctions as statFunc\n",
-    "df_train_num.statFunc.approxQuantile(\"x\", Array(0.5), 0.25)\n",
-    "\n",
-    "# df_train_num.select('account_length').rdd.flatMap(lambda x: x).collect()"
+    "# converting columns to numeric and calculating median\n",
+    "for col_name in df_train_num.columns:\n",
+    "    df_train_num = df_train_num.withColumn(col_name, df_train_num[col_name].cast('float'))\n",
+    "    \n",
+    "median = [df_train_num.approxQuantile(col, [0.5], 0.25)[0] for col in df_train_num.columns]\n",
+    "median"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -442,190 +456,9 @@
     }
    ],
    "source": [
+    "# TrainRdd.approxQuantile(\"x\", [0.5], 0.25)\n",
     "df_train_num.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>account_length</th>\n",
-       "      <th>number_vmail_messages</th>\n",
-       "      <th>total_day_minutes</th>\n",
-       "      <th>total_day_calls</th>\n",
-       "      <th>total_day_charge</th>\n",
-       "      <th>total_eve_minutes</th>\n",
-       "      <th>total_eve_calls</th>\n",
-       "      <th>total_eve_charge</th>\n",
-       "      <th>total_night_minutes</th>\n",
-       "      <th>total_night_calls</th>\n",
-       "      <th>total_night_charge</th>\n",
-       "      <th>total_intl_minutes</th>\n",
-       "      <th>total_intl_calls</th>\n",
-       "      <th>total_intl_charge</th>\n",
-       "      <th>number_customer_service_calls</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "      <td>3333.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>101.06</td>\n",
-       "      <td>8.10</td>\n",
-       "      <td>179.78</td>\n",
-       "      <td>100.44</td>\n",
-       "      <td>30.56</td>\n",
-       "      <td>200.98</td>\n",
-       "      <td>100.11</td>\n",
-       "      <td>17.08</td>\n",
-       "      <td>200.87</td>\n",
-       "      <td>100.11</td>\n",
-       "      <td>9.04</td>\n",
-       "      <td>10.24</td>\n",
-       "      <td>4.48</td>\n",
-       "      <td>2.76</td>\n",
-       "      <td>1.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>39.82</td>\n",
-       "      <td>13.69</td>\n",
-       "      <td>54.47</td>\n",
-       "      <td>20.07</td>\n",
-       "      <td>9.26</td>\n",
-       "      <td>50.71</td>\n",
-       "      <td>19.92</td>\n",
-       "      <td>4.31</td>\n",
-       "      <td>50.57</td>\n",
-       "      <td>19.57</td>\n",
-       "      <td>2.28</td>\n",
-       "      <td>2.79</td>\n",
-       "      <td>2.46</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>1.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>100.30</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>1.04</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>99.00</td>\n",
-       "      <td>9.00</td>\n",
-       "      <td>99.90</td>\n",
-       "      <td>99.00</td>\n",
-       "      <td>9.93</td>\n",
-       "      <td>99.50</td>\n",
-       "      <td>99.00</td>\n",
-       "      <td>9.95</td>\n",
-       "      <td>99.30</td>\n",
-       "      <td>99.00</td>\n",
-       "      <td>9.99</td>\n",
-       "      <td>9.90</td>\n",
-       "      <td>9.00</td>\n",
-       "      <td>5.40</td>\n",
-       "      <td>9.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   account_length  number_vmail_messages  total_day_minutes  total_day_calls  \\\n",
-       "0         3333.00                3333.00            3333.00          3333.00   \n",
-       "1          101.06                   8.10             179.78           100.44   \n",
-       "2           39.82                  13.69              54.47            20.07   \n",
-       "3            1.00                   0.00               0.00             0.00   \n",
-       "4           99.00                   9.00              99.90            99.00   \n",
-       "\n",
-       "   total_day_charge  total_eve_minutes  total_eve_calls  total_eve_charge  \\\n",
-       "0           3333.00            3333.00          3333.00           3333.00   \n",
-       "1             30.56             200.98           100.11             17.08   \n",
-       "2              9.26              50.71            19.92              4.31   \n",
-       "3              0.00               0.00             0.00              0.00   \n",
-       "4              9.93              99.50            99.00              9.95   \n",
-       "\n",
-       "   total_night_minutes  total_night_calls  total_night_charge  \\\n",
-       "0              3333.00            3333.00             3333.00   \n",
-       "1               200.87             100.11                9.04   \n",
-       "2                50.57              19.57                2.28   \n",
-       "3               100.30             100.00                1.04   \n",
-       "4                99.30              99.00                9.99   \n",
-       "\n",
-       "   total_intl_minutes  total_intl_calls  total_intl_charge  \\\n",
-       "0             3333.00           3333.00            3333.00   \n",
-       "1               10.24              4.48               2.76   \n",
-       "2                2.79              2.46               0.75   \n",
-       "3                0.00              0.00               0.00   \n",
-       "4                9.90              9.00               5.40   \n",
-       "\n",
-       "   number_customer_service_calls  \n",
-       "0                        3333.00  \n",
-       "1                           1.56  \n",
-       "2                           1.32  \n",
-       "3                           0.00  \n",
-       "4                           9.00  "
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
