--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing libraries and frameworks\n",
     "from pyspark.sql.functions import col,sum\n",
+    "from scipy.stats import skew, kurtosis\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -380,105 +381,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[74.0,\n",
-       " 0.0,\n",
-       " 143.6999969482422,\n",
-       " 87.0,\n",
-       " 24.43000030517578,\n",
-       " 166.60000610351562,\n",
-       " 87.0,\n",
-       " 14.15999984741211,\n",
-       " 167.0,\n",
-       " 87.0,\n",
-       " 7.519999980926514,\n",
-       " 8.5,\n",
-       " 3.0,\n",
-       " 2.299999952316284,\n",
-       " 1.0]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# converting columns to numeric and calculating median\n",
     "for col_name in df_train_num.columns:\n",
     "    df_train_num = df_train_num.withColumn(col_name, df_train_num[col_name].cast('float'))\n",
     "    \n",
-    "median = [df_train_num.approxQuantile(col, [0.5], 0.25)[0] for col in df_train_num.columns]\n",
-    "median"
+    "median = [df_train_num.approxQuantile(col, [0.5], 0.0)[0] for col in df_train_num.columns]\n",
+    "first_quartile = [df_train_num.approxQuantile(col, [0.25], 0.0)[0] for col in df_train_num.columns]\n",
+    "third_quartile = [df_train_num.approxQuantile(col, [0.75], 0.0)[0] for col in df_train_num.columns]\n",
+    "#med = pd.Series({'median': median})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------+---------------------+-----------------+---------------+----------------+-----------------+---------------+----------------+-------------------+-----------------+------------------+------------------+----------------+-----------------+-----------------------------+\n",
-      "|account_length|number_vmail_messages|total_day_minutes|total_day_calls|total_day_charge|total_eve_minutes|total_eve_calls|total_eve_charge|total_night_minutes|total_night_calls|total_night_charge|total_intl_minutes|total_intl_calls|total_intl_charge|number_customer_service_calls|\n",
-      "+--------------+---------------------+-----------------+---------------+----------------+-----------------+---------------+----------------+-------------------+-----------------+------------------+------------------+----------------+-----------------+-----------------------------+\n",
-      "|           128|                   25|            265.1|            110|           45.07|            197.4|             99|           16.78|              244.7|               91|             11.01|                10|               3|              2.7|                            1|\n",
-      "|           107|                   26|            161.6|            123|           27.47|            195.5|            103|           16.62|              254.4|              103|             11.45|              13.7|               3|              3.7|                            1|\n",
-      "|           137|                    0|            243.4|            114|           41.38|            121.2|            110|            10.3|              162.6|              104|              7.32|              12.2|               5|             3.29|                            0|\n",
-      "|            84|                    0|            299.4|             71|            50.9|             61.9|             88|            5.26|              196.9|               89|              8.86|               6.6|               7|             1.78|                            2|\n",
-      "|            75|                    0|            166.7|            113|           28.34|            148.3|            122|           12.61|              186.9|              121|              8.41|              10.1|               3|             2.73|                            3|\n",
-      "|           118|                    0|            223.4|             98|           37.98|            220.6|            101|           18.75|              203.9|              118|              9.18|               6.3|               6|              1.7|                            0|\n",
-      "|           121|                   24|            218.2|             88|           37.09|            348.5|            108|           29.62|              212.6|              118|              9.57|               7.5|               7|             2.03|                            3|\n",
-      "|           147|                    0|              157|             79|           26.69|            103.1|             94|            8.76|              211.8|               96|              9.53|               7.1|               6|             1.92|                            0|\n",
-      "|           117|                    0|            184.5|             97|           31.37|            351.6|             80|           29.89|              215.8|               90|              9.71|               8.7|               4|             2.35|                            1|\n",
-      "|           141|                   37|            258.6|             84|           43.96|              222|            111|           18.87|              326.4|               97|             14.69|              11.2|               5|             3.02|                            0|\n",
-      "|            65|                    0|            129.1|            137|           21.95|            228.5|             83|           19.42|              208.8|              111|               9.4|              12.7|               6|             3.43|                            4|\n",
-      "|            74|                    0|            187.7|            127|           31.91|            163.4|            148|           13.89|                196|               94|              8.82|               9.1|               5|             2.46|                            0|\n",
-      "|           168|                    0|            128.8|             96|            21.9|            104.9|             71|            8.92|              141.1|              128|              6.35|              11.2|               2|             3.02|                            1|\n",
-      "|            95|                    0|            156.6|             88|           26.62|            247.6|             75|           21.05|              192.3|              115|              8.65|              12.3|               5|             3.32|                            3|\n",
-      "|            62|                    0|            120.7|             70|           20.52|            307.2|             76|           26.11|                203|               99|              9.14|              13.1|               6|             3.54|                            4|\n",
-      "|           161|                    0|            332.9|             67|           56.59|            317.8|             97|           27.01|              160.6|              128|              7.23|               5.4|               9|             1.46|                            4|\n",
-      "|            85|                   27|            196.4|            139|           33.39|            280.9|             90|           23.88|               89.3|               75|              4.02|              13.8|               4|             3.73|                            1|\n",
-      "|            93|                    0|            190.7|            114|           32.42|            218.2|            111|           18.55|              129.6|              121|              5.83|               8.1|               3|             2.19|                            3|\n",
-      "|            76|                   33|            189.7|             66|           32.25|            212.8|             65|           18.09|              165.7|              108|              7.46|                10|               5|              2.7|                            1|\n",
-      "|            73|                    0|            224.4|             90|           38.15|            159.5|             88|           13.56|              192.8|               74|              8.68|                13|               2|             3.51|                            1|\n",
-      "+--------------+---------------------+-----------------+---------------+----------------+-----------------+---------------+----------------+-------------------+-----------------+------------------+------------------+----------------+-----------------+-----------------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# TrainRdd.approxQuantile(\"x\", [0.5], 0.25)\n",
-    "df_train_num.show()"
+    "# Getting mean absolute deviation\n",
+    "def mad(col, axis=None):\n",
+    "    data = [int(row[col]) for row in df_train_num.select(col).collect()]\n",
+    "    return np.mean(np.absolute(data - np.mean(data, axis)), axis)\n",
+    "\n",
+    "mad = [mad(col) for col in df_train_num.columns]\n",
+    "\n",
+    "# Getting skewness\n",
+    "skew_list = [skew([int(row[col]) for row in df_train_num.select(col).collect()])\n",
+    "            for col in df_train_num.columns]\n",
+    "\n",
+    "# Getting kurtosis\n",
+    "kurt = [kurtosis([int(row[col]) for row in df_train_num.select(col).collect()])\n",
+    "            for col in df_train_num.columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[_c0: string, state: string, account_length: string, area_code: string, international_plan: string, voice_mail_plan: string, number_vmail_messages: string, total_day_minutes: string, total_day_calls: string, total_day_charge: string, total_eve_minutes: string, total_eve_calls: string, total_eve_charge: string, total_night_minutes: string, total_night_calls: string, total_night_charge: string, total_intl_minutes: string, total_intl_calls: string, total_intl_charge: string, number_customer_service_calls: string, churn: string]"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
