--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,8 +198,7 @@
     "\n",
     "df = pd.DataFrame([pd.to_numeric(summary_df[col]) for col in s]).T.round(2)\n",
     "idx = 0\n",
-    "df.insert(loc=idx, column='summary', value=summary_df.summary.values)\n",
-    "# display(df)"
+    "df.insert(loc=idx, column='summary', value=summary_df.summary.values)"
    ]
   },
   {
@@ -594,6 +593,141 @@
    "source": [
     "display(df.set_index('summary').round(2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>summary</th>\n",
+       "      <th>state</th>\n",
+       "      <th>area_code</th>\n",
+       "      <th>international_plan</th>\n",
+       "      <th>voice_mail_plan</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>count</td>\n",
+       "      <td>3333</td>\n",
+       "      <td>3333</td>\n",
+       "      <td>3333</td>\n",
+       "      <td>3333</td>\n",
+       "      <td>3333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mean</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>stddev</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>min</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>area_code_408</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>max</td>\n",
+       "      <td>WY</td>\n",
+       "      <td>area_code_510</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  summary state      area_code international_plan voice_mail_plan churn\n",
+       "0   count  3333           3333               3333            3333  3333\n",
+       "1    mean  None           None               None            None  None\n",
+       "2  stddev  None           None               None            None  None\n",
+       "3     min    AK  area_code_408                 no              no    no\n",
+       "4     max    WY  area_code_510                yes             yes   yes"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute categorical data summary statistics\n",
+    "df_train_cat = df_train.select(['state', 'area_code', 'international_plan', 'voice_mail_plan', 'churn'])\n",
+    "\n",
+    "count = [df_train.count()] * len(df_train_cat.columns)\n",
+    "unique = [df_train_cat.select(col).distinct().count() for col in df_train_cat.columns]\n",
+    "\n",
+    "top = []\n",
+    "freq = []\n",
+    "\n",
+    "for col in df_train_cat.columns:\n",
+    "    frequency = df_train_cat.groupBy(col).count().orderBy('count', ascending=False).head(1)[0]\n",
+    "    top.append(frequency[col])\n",
+    "    freq.append(frequency['count'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
