--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>summary</th>\n",
        "      <th>state</th>\n",
        "      <th>area_code</th>\n",
        "      <th>international_plan</th>\n",
@@ -630,66 +629,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>count</td>\n",
-       "      <td>3333</td>\n",
-       "      <td>3333</td>\n",
-       "      <td>3333</td>\n",
-       "      <td>3333</td>\n",
-       "      <td>3333</td>\n",
+       "      <th>count</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>mean</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <th>unique</th>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>stddev</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>min</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>area_code_408</td>\n",
+       "      <th>top</th>\n",
+       "      <td>WV</td>\n",
+       "      <td>area_code_415</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>max</td>\n",
-       "      <td>WY</td>\n",
-       "      <td>area_code_510</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
+       "      <th>freq</th>\n",
+       "      <td>106</td>\n",
+       "      <td>1655</td>\n",
+       "      <td>3010</td>\n",
+       "      <td>2411</td>\n",
+       "      <td>2850</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  summary state      area_code international_plan voice_mail_plan churn\n",
-       "0   count  3333           3333               3333            3333  3333\n",
-       "1    mean  None           None               None            None  None\n",
-       "2  stddev  None           None               None            None  None\n",
-       "3     min    AK  area_code_408                 no              no    no\n",
-       "4     max    WY  area_code_510                yes             yes   yes"
+       "       state      area_code international_plan voice_mail_plan churn\n",
+       "count     10             10                 10              10    10\n",
+       "unique    51              3                  2               2     2\n",
+       "top       WV  area_code_415                 no              no    no\n",
+       "freq     106           1655               3010            2411  2850"
       ]
      },
-     "execution_count": 110,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -705,7 +689,16 @@
     "for col in df_train_cat.columns:\n",
     "    frequency = df_train_cat.groupBy(col).count().orderBy('count', ascending=False).head(1)[0]\n",
     "    top.append(frequency[col])\n",
-    "    freq.append(frequency['count'])"
+    "    freq.append(frequency['count'])\n",
+    "    \n",
+    "desc = pd.DataFrame({}, columns = df_train_cat.columns, index=['count', 'unique', 'top', 'freq'])\n",
+    "\n",
+    "desc.loc['count'] = count\n",
+    "desc.loc['unique'] = unique\n",
+    "desc.loc['top'] = top\n",
+    "desc.loc['freq'] = freq\n",
+    "\n",
+    "display(desc)"
    ]
   },
   {
@@ -724,9 +717,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>area_code</th>\n",
+       "      <th>international_plan</th>\n",
+       "      <th>voice_mail_plan</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>WV</td>\n",
+       "      <td>area_code_415</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>106</td>\n",
+       "      <td>1655</td>\n",
+       "      <td>3010</td>\n",
+       "      <td>2411</td>\n",
+       "      <td>2850</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       state      area_code international_plan voice_mail_plan churn\n",
+       "count     10             10                 10              10    10\n",
+       "unique    51              3                  2               2     2\n",
+       "top       WV  area_code_415                 no              no    no\n",
+       "freq     106           1655               3010            2411  2850"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": []
   }
  ],
