--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -1687,20 +1687,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<map at 0x7efffa8723c8>"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Converting categoric features to numeric\n",
     "df_new_train_cat = df_train_cat\n",
@@ -1719,110 +1708,39 @@
     "    dic[state.state] = str(count)\n",
     "    count += 1\n",
     "\n",
-    "def numerate_state(item):\n",
-    "    df_new_train_cat.withColumn('state', f.regexp_replace('state', item[0], item[1]))\n",
-    "    \n",
+    "for item in dic.items():\n",
+    "    df_new_train_cat = df_new_train_cat.withColumn('state', f.regexp_replace('state', item[0], item[1]))\n",
     "\n",
-    "map(numerate_state, df_new_train_cat)\n",
-    "    \n",
-    "# df_new_train_cat.state = df_new_train_cat.state.apply(lambda x: dic[x])\n",
     "\n",
-    "# # Changing area_code variable\n",
-    "# df_new_train_cat.area_code[df_new_train_cat.area_code == 'area_code_408'] = 1\n",
-    "# df_new_train_cat.area_code[df_new_train_cat.area_code == 'area_code_510'] = 2\n",
-    "# df_new_train_cat.area_code[df_new_train_cat.area_code == 'area_code_415'] = 3"
+    "# Changing area_code variable\n",
+    "df_new_train_cat = df_new_train_cat.withColumn('area_code', f.regexp_replace(col, 'area_code_408', '1'))\n",
+    "df_new_train_cat = df_new_train_cat.withColumn('area_code', f.regexp_replace(col, 'area_code_510', '2'))\n",
+    "df_new_train_cat = df_new_train_cat.withColumn('area_code', f.regexp_replace(col, 'area_code_415', '3'))\n",
+    "\n",
+    "# Converting to numeric\n",
+    "for col_name in df_new_train_cat.columns:\n",
+    "    df_new_train_cat = df_new_train_cat.withColumn(col_name, df_new_train_cat[col_name].cast('float'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'map' object has no attribute 'head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-174-fa1fef50ff0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumerate_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_new_train_cat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'map' object has no attribute 'head'"
-     ]
-    }
-   ],
-   "source": [
-    "test = map(numerate_state, df_new_train_cat)\n",
-    "test.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('AZ', '1'),\n",
-       " ('SC', '2'),\n",
-       " ('LA', '3'),\n",
-       " ('MN', '4'),\n",
-       " ('NJ', '5'),\n",
-       " ('DC', '6'),\n",
-       " ('OR', '7'),\n",
-       " ('VA', '8'),\n",
-       " ('RI', '9'),\n",
-       " ('WY', '10'),\n",
-       " ('KY', '11'),\n",
-       " ('NH', '12'),\n",
-       " ('MI', '13'),\n",
-       " ('NV', '14'),\n",
-       " ('WI', '15'),\n",
-       " ('ID', '16'),\n",
-       " ('CA', '17'),\n",
-       " ('NE', '18'),\n",
-       " ('CT', '19'),\n",
-       " ('MT', '20'),\n",
-       " ('NC', '21'),\n",
-       " ('VT', '22'),\n",
-       " ('MD', '23'),\n",
-       " ('DE', '24'),\n",
-       " ('MO', '25'),\n",
-       " ('IL', '26'),\n",
-       " ('ME', '27'),\n",
-       " ('WA', '28'),\n",
-       " ('ND', '29'),\n",
-       " ('MS', '30'),\n",
-       " ('AL', '31'),\n",
-       " ('IN', '32'),\n",
-       " ('OH', '33'),\n",
-       " ('TN', '34'),\n",
-       " ('IA', '35'),\n",
-       " ('NM', '36'),\n",
-       " ('PA', '37'),\n",
-       " ('SD', '38'),\n",
-       " ('NY', '39'),\n",
-       " ('TX', '40'),\n",
-       " ('WV', '41'),\n",
-       " ('GA', '42'),\n",
-       " ('MA', '43'),\n",
-       " ('KS', '44'),\n",
-       " ('FL', '45'),\n",
-       " ('CO', '46'),\n",
-       " ('AK', '47'),\n",
-       " ('AR', '48'),\n",
-       " ('OK', '49'),\n",
-       " ('UT', '50'),\n",
-       " ('HI', '51')]"
+       "[Row(state=44.0, area_code=1.0, international_plan=0.0, voice_mail_plan=1.0, churn=0.0),\n",
+       " Row(state=33.0, area_code=1.0, international_plan=0.0, voice_mail_plan=1.0, churn=0.0)]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(dic.items())"
+    "df_new_train_cat.head(2)"
    ]
   },
   {
@@ -1832,8 +1750,8 @@
    "outputs": [],
    "source": [
     "# Converting to numeric\n",
-    "for col_name in df.columns:\n",
-    "    df = df.withColumn(col_name, df[col_name].cast('float'))"
+    "for col_name in df_new_train_cat.columns:\n",
+    "    df_new_train_cat = df_new_train_cat.withColumn(col_name, df_new_train_cat[col_name].cast('float'))"
    ]
   }
  ],
