--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,70 +2061,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Transformação e Limpeza\n",
-    "# dic_state = {}\n",
-    "# count = 1\n",
+    "# Transformação e Limpeza\n",
+    "dic_state = {}\n",
+    "count = 1\n",
     "\n",
-    "# # Changing state variable\n",
+    "# Changing state variable\n",
     "# for state in df_train.select(\"state\").distinct().collect():\n",
     "#     dic_state[state.state] = str(count)\n",
     "#     count += 1\n",
+    "\n",
+    "# dic_area_code = {'area_code_408': 1,\n",
+    "#                 'area_code_510': 2,\n",
+    "#                 'area_code_415': 3}\n",
+    "\n",
+    "# dic_binary = {\"no\": 0,\n",
+    "#              \"yes\": 1}\n",
     "\n",
     "# Function to transform and clean rdd data\n",
     "def cleanRDD(autoStr) :\n",
     "    \n",
     "    # checking indexing\n",
-    "    if isinstance(autoStr, int) :\n",
+    "    if isinstance(autoStr, int):\n",
     "        return autoStr\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # Separate each index with a comma (column separator)\n",
     "    attList = autoStr.split(\",\")\n",
-    "    attList = attList[1:]\n",
     "    \n",
-    "    # Converte o número de portas para um num\n",
-    "    if attList[3] == \"two\" :\n",
-    "        attList[3] = \"2\"\n",
-    "    elif attList[3] == \"four\":\n",
-    "        attList[3] = \"4\"\n",
+    "    # Checking if line is the header\n",
+    "    if \"state\" not in attList:\n",
     "    \n",
-    "    # Convert o modelo do carro para uppercase\n",
-    "    attList[5] = attList[4].upper()\n",
-    "    return \",\".join(attList)"
+    "        # Changing and converting categorical variables to numeric\n",
+    "        attList[1] = dic_state[attList[1]]\n",
+    "        attList[3] = dic_area_code[attList[3]]\n",
+    "        attList[4] = dic_binary[attList[4]]\n",
+    "        attList[5] = dic_binary[attList[5]]\n",
+    "        attList[20] = dic_binary[attList[20]]\n",
+    "\n",
+    "        # Converting numerical variables to numeric\n",
+    "        attList[2] = pd.to_numeric(attList[2])\n",
+    "        attList[6:20] = list(map(pd.numeric, attList[6:20]))\n",
+    "        \n",
+    "    # Remove variables\n",
+    "    \n",
+    "    attList = attList[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if isinstance(trainRdd, int):\n",
-    "        print(\"ok\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\"\",\"state\",\"account_length\",\"area_code\",\"international_plan\",\"voice_mail_plan\",\"number_vmail_messages\",\"total_day_minutes\",\"total_day_calls\",\"total_day_charge\",\"total_eve_minutes\",\"total_eve_calls\",\"total_eve_charge\",\"total_night_minutes\",\"total_night_calls\",\"total_night_charge\",\"total_intl_minutes\",\"total_intl_calls\",\"total_intl_charge\",\"number_customer_service_calls\",\"churn\"'"
-      ]
-     },
-     "execution_count": 239,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 \"\"\n",
+      "1 \"state\"\n",
+      "2 \"account_length\"\n",
+      "3 \"area_code\"\n",
+      "4 \"international_plan\"\n",
+      "5 \"voice_mail_plan\"\n",
+      "6 \"number_vmail_messages\"\n",
+      "7 \"total_day_minutes\"\n",
+      "8 \"total_day_calls\"\n",
+      "9 \"total_day_charge\"\n",
+      "10 \"total_eve_minutes\"\n",
+      "11 \"total_eve_calls\"\n",
+      "12 \"total_eve_charge\"\n",
+      "13 \"total_night_minutes\"\n",
+      "14 \"total_night_calls\"\n",
+      "15 \"total_night_charge\"\n",
+      "16 \"total_intl_minutes\"\n",
+      "17 \"total_intl_calls\"\n",
+      "18 \"total_intl_charge\"\n",
+      "19 \"number_customer_service_calls\"\n",
+      "20 \"churn\"\n"
+     ]
     }
    ],
    "source": [
-    "trainRdd.collect()[0]"
+    "for i in range(len(cols)):\n",
+    "    print(i, cols[i])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
