--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -2045,7 +2045,7 @@
    "metadata": {},
    "source": [
     "## Feature Engineering\n",
-    "Converting train categorical variables to numerical"
+    "In this session, I converted categorical variables to numeric format, removed high correlated features and unnecessary variable."
    ]
   },
   {
@@ -2081,6 +2081,11 @@
     "# dic_binary = {\"no\": 0,\n",
     "#              \"yes\": 1}\n",
     "\n",
+    "# Removing all minutes variables (highly correlated to charge features)\n",
+    "# cols = trainRdd.collect()[0].split(\",\")\n",
+    "# removal_index = [i for i in range(len(cols)) if 'minute' in cols[i]]\n",
+    "# removal_index\n",
+    "\n",
     "# Function to transform and clean rdd data\n",
     "def cleanRDD(autoStr) :\n",
     "    \n",
@@ -2107,47 +2112,68 @@
     "        attList[2] = pd.to_numeric(attList[2])\n",
     "        attList[6:20] = list(map(pd.numeric, attList[6:20]))\n",
     "        \n",
-    "    # Remove variables\n",
-    "    \n",
-    "    attList = attList[1:]"
+    "    # Removing high correlated features and \"id\" variable\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in removal_index:\n",
+    "        del cols_test[i-count]\n",
+    "        count +=1\n",
+    "        \n",
+    "    del attList[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 \"\"\n",
-      "1 \"state\"\n",
-      "2 \"account_length\"\n",
-      "3 \"area_code\"\n",
-      "4 \"international_plan\"\n",
-      "5 \"voice_mail_plan\"\n",
-      "6 \"number_vmail_messages\"\n",
-      "7 \"total_day_minutes\"\n",
-      "8 \"total_day_calls\"\n",
-      "9 \"total_day_charge\"\n",
-      "10 \"total_eve_minutes\"\n",
-      "11 \"total_eve_calls\"\n",
-      "12 \"total_eve_charge\"\n",
-      "13 \"total_night_minutes\"\n",
-      "14 \"total_night_calls\"\n",
-      "15 \"total_night_charge\"\n",
-      "16 \"total_intl_minutes\"\n",
-      "17 \"total_intl_calls\"\n",
-      "18 \"total_intl_charge\"\n",
-      "19 \"number_customer_service_calls\"\n",
-      "20 \"churn\"\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['\"\"',\n",
+       " '\"state\"',\n",
+       " '\"account_length\"',\n",
+       " '\"area_code\"',\n",
+       " '\"international_plan\"',\n",
+       " '\"voice_mail_plan\"',\n",
+       " '\"number_vmail_messages\"',\n",
+       " '\"total_day_calls\"',\n",
+       " '\"total_day_charge\"',\n",
+       " '\"total_eve_calls\"',\n",
+       " '\"total_eve_charge\"',\n",
+       " '\"total_night_calls\"',\n",
+       " '\"total_night_charge\"',\n",
+       " '\"total_intl_calls\"',\n",
+       " '\"total_intl_charge\"',\n",
+       " '\"number_customer_service_calls\"',\n",
+       " '\"churn\"']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 10, 13, 16]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(len(cols)):\n",
-    "    print(i, cols[i])"
+    "removal_index"
    ]
   },
   {
